--- a/patbati/bati/templates/bati/bati_detail_attributes.html
+++ b/patbati/bati/templates/bati/bati_detail_attributes.html
@@ -1,22 +1,22 @@
-{% extends "mapentity/mapentity_detail_attributes.html" %} {% load i18n
-mapentity_tags %}
+{% extends "mapentity/mapentity_detail_attributes.html" %} 
+{% load i18n mapentity_tags %}
+{% extends "mapentity/mapentity_detail_attributes.html" %} 
+{% load i18n mapentity_tags %}
 {% block attributes %}
 
 <!-- Table renseignements (expanded by default) -->
 <div class="content mb-3">
   <div class="card">
-    <div class="card-header text-center" style="position: relative">
-      Renseignements
-      <button
-        class="btn btn-link p-0 float-end"
-        type="button"
-        data-toggle="collapse"
-        data-target="#collapseRenseignements"
-        aria-expanded="true"
-        aria-controls="collapseRenseignements"
-      >
-        <span class="chevron-icon"><i class="bi bi-chevron-down"></i></span>
-      </button>
+    <div class="card-header text-center d-flex justify-content-between align-items-center" 
+         data-toggle="collapse" data-target="#collapseRenseignements"
+         aria-expanded="true" aria-controls="collapseRenseignements" style="cursor:pointer; position: relative;">
+      <span>Renseignements</span>
+      <span class="chevron-icon"><i class="bi bi-chevron-down"></i></span>
+    <div class="card-header text-center d-flex justify-content-between align-items-center" 
+         data-toggle="collapse" data-target="#collapseRenseignements"
+         aria-expanded="true" aria-controls="collapseRenseignements" style="cursor:pointer; position: relative;">
+      <span>Renseignements</span>
+      <span class="chevron-icon"><i class="bi bi-chevron-down"></i></span>
     </div>
     <div id="collapseRenseignements" class="collapse show">
       <div class="card-body p-0">
@@ -91,133 +91,175 @@ mapentity_tags %}
   </div>
 </div>
 
-<div class="d-flex mb-2">
-  <h4>Perspectives</h4>
-  <a
-    href="{% url 'bati:perspectives_add' pk=object.pk %}"
-    class="btn btn-success ml-2"
-    >+</a
-  >
+<!-- Perspective -->
+<div class="d-flex mb-2 align-items-center">
+  <h4 class="mb-0">Perspectives</h4>
+  <a href="{% url 'bati:perspectives_add' pk=object.pk %}" class="btn btn-success ml-2">+</a>
 </div>
 <table class="table table-striped">
-  <tr>
-    <th>Date</th>
-    <th>Perspective</th>
-    <th></th>
-  </tr>
-
-  {% for pers in object.perspective_set.all %}
-  <tr>
-    <td>{{pers.date}}</td>
-    <td>{{pers.perspective.label}}</td>
-    <td>
-      <button class="btn btn-primary">
-        <i class="bi bi-pencil-square"></i>
-      </button>
-    </td>
-  </tr>
-  {% endfor %}
+  <thead>
+    <tr>
+      <th style="width:40%;">Date</th>
+      <th style="width:40%;">Perspective</th>
+      <th style="width:20%;">Actions</th>
+    </tr>
+  </thead>
+  <tbody>
+    {% for pers in object.perspective_set.all %}
+    <tr>
+      <td>{{ pers.date }}</td>
+      <td>{{ pers.perspective.label }}</td>
+      <td>
+        <a href="{% url 'bati:perspectives_update' object.pk pers.pk %}" class="btn btn-primary">
+            <i class="bi bi-pencil-square"></i>
+        </a>
+        <a href="{% url 'bati:perspectives_delete' object.pk pers.pk %}" class="btn btn-danger">
+            <i class="bi bi-trash"></i>
+        </a>
+      </td>
+    </tr>
+    {% endfor %}
+  </tbody>
+</table>
+<!-- Perspective -->
+<div class="d-flex mb-2 align-items-center">
+  <h4 class="mb-0">Perspectives</h4>
+  <a href="{% url 'bati:perspectives_add' pk=object.pk %}" class="btn btn-success ml-2">+</a>
+</div>
+<table class="table table-striped">
+  <thead>
+    <tr>
+      <th style="width:40%;">Date</th>
+      <th style="width:40%;">Perspective</th>
+      <th style="width:20%;">Actions</th>
+    </tr>
+  </thead>
+  <tbody>
+    {% for pers in object.perspective_set.all %}
+    <tr>
+      <td>{{ pers.date }}</td>
+      <td>{{ pers.perspective.label }}</td>
+      <td>
+        <a href="{% url 'bati:perspectives_update' object.pk pers.pk %}" class="btn btn-primary">
+            <i class="bi bi-pencil-square"></i>
+        </a>
+        <a href="{% url 'bati:perspectives_delete' object.pk pers.pk %}" class="btn btn-danger">
+            <i class="bi bi-trash"></i>
+        </a>
+      </td>
+    </tr>
+    {% endfor %}
+  </tbody>
 </table>
 
-<!-- Table Enquêtes (expanded by default) -->
-<div class="content mb-3">
-  <div class="card">
-    <div class="card-header text-center" style="position: relative">
-      Liste des enquêtes
-      <button
-        class="btn btn-link p-0 float-end"
-        type="button"
-        data-toggle="collapse"
-        data-target="#collapseEnquetes"
-        aria-expanded="true"
-        aria-controls="collapseEnquetes"
-      >
-        <span class="chevron-icon"><i class="bi bi-chevron-down"></i></span>
-      </button>
-    </div>
-    <div id="collapseEnquetes" class="collapse show">
-      <div class="card-body p-0">
-        <table class="table table-striped table-bordered mb-0">
-          <thead>
-            <tr>
-              <th>Personne</th>
-              <th>Date enquête</th>
-              <th>Date rédaction</th>
-            </tr>
-          </thead>
-          <tbody>
-            {% for enquete in object.enquetes.all %}
-            <tr>
-              <td>{{ enquete.personne }}</td>
-              <td>{{ enquete.date_enquete|date:"d/m/Y H:i" }}</td>
-              <td>{{ enquete.date_redaction|date:"d/m/Y H:i" }}</td>
-            </tr>
-            {% empty %}
-            <tr>
-              <td colspan="3" class="text-center">Aucune enquête associée</td>
-            </tr>
-            {% endfor %}
-          </tbody>
-        </table>
-        <a
-          href="{% url 'bati:enquetes_add' pk=object.pk %}"
-          class="btn btn-success mb-2"
-        >
-          Ajouter une enquête
-        </a>
-      </div>
-    </div>
-  </div>
+<!-- Enquêtes -->
+<div class="d-flex mb-2 align-items-center">
+  <h4 class="mb-0">Enquêtes</h4>
+  <a href="{% url 'bati:enquetes_add' pk=object.pk %}" class="btn btn-success ml-2">+</a>
 </div>
+<table class="table table-striped">
+  <thead>
+    <tr>
+      <th style="width:26.6%;">Personne</th>
+      <th style="width:26.6%;">Date enquête</th>
+      <th style="width:26.6%;">Date rédaction</th>
+      <th style="width:20%;">Actions</th>
+    </tr>
+  </thead>
+  <tbody>
+    {% for enquete in object.enquetes.all %}
+    <tr>
+      <td>{{ enquete.personne }}</td>
+      <td>{{ enquete.date_enquete|date:"d/m/Y H:i" }}</td>
+      <td>{{ enquete.date_redaction|date:"d/m/Y H:i" }}</td>
+      <td>
+        <a href="{% url 'bati:enquetes_update' object.pk enquete.pk%}" class="btn btn-primary">
+          <i class="bi bi-pencil-square"></i>
+        </a>
+        <a href="{% url 'bati:enquetes_delete' object.pk enquete.pk %}" class="btn btn-danger">
+          <i class="bi bi-trash"></i>
+        </a>
+      </td>
+    </tr>
+    {% empty %}
+    <tr>
+      <td colspan="4" class="text-center">Aucune enquête associée</td>
+    </tr>
+    {% endfor %}
+  </tbody>
+</table>
+<!-- Enquêtes -->
+<div class="d-flex mb-2 align-items-center">
+  <h4 class="mb-0">Enquêtes</h4>
+  <a href="{% url 'bati:enquetes_add' pk=object.pk %}" class="btn btn-success ml-2">+</a>
+</div>
+<table class="table table-striped">
+  <thead>
+    <tr>
+      <th style="width:26.6%;">Personne</th>
+      <th style="width:26.6%;">Date enquête</th>
+      <th style="width:26.6%;">Date rédaction</th>
+      <th style="width:20%;">Actions</th>
+    </tr>
+  </thead>
+  <tbody>
+    {% for enquete in object.enquetes.all %}
+    <tr>
+      <td>{{ enquete.personne }}</td>
+      <td>{{ enquete.date_enquete|date:"d/m/Y H:i" }}</td>
+      <td>{{ enquete.date_redaction|date:"d/m/Y H:i" }}</td>
+      <td>
+        <a href="{% url 'bati:enquetes_update' object.pk enquete.pk%}" class="btn btn-primary">
+          <i class="bi bi-pencil-square"></i>
+        </a>
+        <a href="{% url 'bati:enquetes_delete' object.pk enquete.pk %}" class="btn btn-danger">
+          <i class="bi bi-trash"></i>
+        </a>
+      </td>
+    </tr>
+    {% empty %}
+    <tr>
+      <td colspan="4" class="text-center">Aucune enquête associée</td>
+    </tr>
+    {% endfor %}
+  </tbody>
+</table>
 
-<!-- Table géographie (collapsed by default) -->
+<!-- Collapsible card for Géographie -->
+<!-- Collapsible card for Géographie -->
 <div class="content mb-3">
   <div class="card">
-    <div class="card-header text-center" style="position: relative">
-      Géographie
-      <button
-        class="btn btn-link p-0 float-end collapsed"
-        type="button"
+    <div class="card-header text-center d-flex justify-content-between align-items-center"
+    <div class="card-header text-center d-flex justify-content-between align-items-center"
         data-toggle="collapse"
         data-target="#collapseGeo"
         aria-expanded="false"
         aria-controls="collapseGeo"
-      >
-        <span class="chevron-icon"><i class="bi bi-chevron-down"></i></span>
-      </button>
+        style="cursor:pointer; position: relative;">
+      <span>Géographie</span>
+      <span class="chevron-icon"><i class="bi bi-chevron-down"></i></span>
+        style="cursor:pointer; position: relative;">
+      <span>Géographie</span>
+      <span class="chevron-icon"><i class="bi bi-chevron-down"></i></span>
     </div>
     <div id="collapseGeo" class="collapse">
       <div class="card-body p-0">
         <table class="table table-striped table-bordered mb-0">
           <tbody>
-            <tr>
-              <th>Secteur</th>
-              <td>{{ object.secteur|default:"-" }}</td>
-            </tr>
-            <tr>
-              <th>Lieu-dit</th>
-              <td>{{ object.lieu_dit|default:"-" }}</td>
-            </tr>
-            <tr>
-              <th>Cadastre</th>
-              <td>{{ object.cadastre|default:"-" }}</td>
-            </tr>
-            <tr>
-              <th>Coordonnée X</th>
-              <td>{{ object.x|default:"-" }}</td>
-            </tr>
-            <tr>
-              <th>Coordonnée Y</th>
-              <td>{{ object.y|default:"-" }}</td>
-            </tr>
-            <tr>
-              <th>Altitude</th>
-              <td>{{ object.altitude|default:"-" }}</td>
-            </tr>
-            <tr>
-              <th>Dénivelé</th>
-              <td>{{ object.denivelle|default:"-" }}</td>
-            </tr>
+            <tr><th>Secteur</th><td>{{ object.secteur }}</td></tr>
+            <tr><th>Lieu-dit</th><td>{{ object.lieu_dit }}</td></tr>
+            <tr><th>Cadastre</th><td>{{ object.cadastre }}</td></tr>
+            <tr><th>Coordonnée X</th><td>{{ object.x }}</td></tr>
+            <tr><th>Coordonnée Y</th><td>{{ object.y }}</td></tr>
+            <tr><th>Altitude</th><td>{{ object.altitude|default:"-" }}</td></tr>
+            <tr><th>Dénivelé</th><td>{{ object.denivelle|default:"-" }}</td></tr>
+            <tr><th>Secteur</th><td>{{ object.secteur }}</td></tr>
+            <tr><th>Lieu-dit</th><td>{{ object.lieu_dit }}</td></tr>
+            <tr><th>Cadastre</th><td>{{ object.cadastre }}</td></tr>
+            <tr><th>Coordonnée X</th><td>{{ object.x }}</td></tr>
+            <tr><th>Coordonnée Y</th><td>{{ object.y }}</td></tr>
+            <tr><th>Altitude</th><td>{{ object.altitude|default:"-" }}</td></tr>
+            <tr><th>Dénivelé</th><td>{{ object.denivelle|default:"-" }}</td></tr>
           </tbody>
         </table>
       </div>
@@ -225,46 +267,37 @@ mapentity_tags %}
   </div>
 </div>
 
-<!-- Table Situation (collapsed by default) -->
+<!-- Collapsible card for Situation -->
+<!-- Collapsible card for Situation -->
 <div class="content mb-3">
   <div class="card">
-    <div class="card-header text-center" style="position: relative">
-      Situation
-      <button
-        class="btn btn-link p-0 float-end collapsed"
-        type="button"
+    <div class="card-header text-center d-flex justify-content-between align-items-center"
+    <div class="card-header text-center d-flex justify-content-between align-items-center"
         data-toggle="collapse"
         data-target="#collapseSituation"
         aria-expanded="false"
         aria-controls="collapseSituation"
-      >
-        <span class="chevron-icon"><i class="bi bi-chevron-down"></i></span>
-      </button>
+        style="cursor:pointer; position: relative;">
+      <span>Situation</span>
+      <span class="chevron-icon"><i class="bi bi-chevron-down"></i></span>
+        style="cursor:pointer; position: relative;">
+      <span>Situation</span>
+      <span class="chevron-icon"><i class="bi bi-chevron-down"></i></span>
     </div>
     <div id="collapseSituation" class="collapse">
       <div class="card-body p-0">
         <table class="table table-striped table-bordered mb-0">
           <tbody>
-            <tr>
-              <th>Implantation</th>
-              <td>{{ object.implantation|default:"-" }}</td>
-            </tr>
-            <tr>
-              <th>Faitage</th>
-              <td>{{ object.faitage|default:"-" }}</td>
-            </tr>
-            <tr>
-              <th>Situation géographique</th>
-              <td>{{ object.situation_geo|default:"-" }}</td>
-            </tr>
-            <tr>
-              <th>Exposition</th>
-              <td>{{ object.exposition|default:"-" }}</td>
-            </tr>
-            <tr>
-              <th>Pente</th>
-              <td>{{ object.pente|default:"-" }}</td>
-            </tr>
+            <tr><th>Implantation</th><td>{{ object.implantation }}</td></tr>
+            <tr><th>Faitage</th><td>{{ object.faitage }}</td></tr>
+            <tr><th>Situation géographique</th><td>{{ object.situation_geo }}</td></tr>
+            <tr><th>Exposition</th><td>{{ object.exposition }}</td></tr>
+            <tr><th>Pente</th><td>{{ object.pente }}</td></tr>
+            <tr><th>Implantation</th><td>{{ object.implantation }}</td></tr>
+            <tr><th>Faitage</th><td>{{ object.faitage }}</td></tr>
+            <tr><th>Situation géographique</th><td>{{ object.situation_geo }}</td></tr>
+            <tr><th>Exposition</th><td>{{ object.exposition }}</td></tr>
+            <tr><th>Pente</th><td>{{ object.pente }}</td></tr>
           </tbody>
         </table>
       </div>
@@ -272,21 +305,22 @@ mapentity_tags %}
   </div>
 </div>
 
-<!-- Table Contexte Naturel (collapsed by default) -->
+<!-- Collapsible card for Contexte naturel -->
+<!-- Collapsible card for Contexte naturel -->
 <div class="content mb-3">
   <div class="card">
-    <div class="card-header text-center" style="position: relative">
-      Contexte naturel
-      <button
-        class="btn btn-link p-0 float-end collapsed"
-        type="button"
+    <div class="card-header text-center d-flex justify-content-between align-items-center"
+    <div class="card-header text-center d-flex justify-content-between align-items-center"
         data-toggle="collapse"
         data-target="#collapseNaturel"
         aria-expanded="false"
         aria-controls="collapseNaturel"
-      >
-        <span class="chevron-icon"><i class="bi bi-chevron-down"></i></span>
-      </button>
+        style="cursor:pointer; position: relative;">
+      <span>Contexte naturel</span>
+      <span class="chevron-icon"><i class="bi bi-chevron-down"></i></span>
+        style="cursor:pointer; position: relative;">
+      <span>Contexte naturel</span>
+      <span class="chevron-icon"><i class="bi bi-chevron-down"></i></span>
     </div>
     <div id="collapseNaturel" class="collapse">
       <div class="card-body p-0">
@@ -332,21 +366,22 @@ mapentity_tags %}
   </div>
 </div>
 
-<!-- Table Equipements (collapsed by default) -->
+<!-- Collapsible card for Equipements -->
+<!-- Collapsible card for Equipements -->
 <div class="content mb-3">
   <div class="card">
-    <div class="card-header text-center" style="position: relative">
-      Equipements
-      <button
-        class="btn btn-link p-0 float-end collapsed"
-        type="button"
+    <div class="card-header text-center d-flex justify-content-between align-items-center"
+    <div class="card-header text-center d-flex justify-content-between align-items-center"
         data-toggle="collapse"
         data-target="#collapseEquipements"
         aria-expanded="false"
         aria-controls="collapseEquipements"
-      >
-        <span class="chevron-icon"><i class="bi bi-chevron-down"></i></span>
-      </button>
+        style="cursor:pointer; position: relative;">
+      <span>Equipements</span>
+      <span class="chevron-icon"><i class="bi bi-chevron-down"></i></span>
+        style="cursor:pointer; position: relative;">
+      <span>Equipements</span>
+      <span class="chevron-icon"><i class="bi bi-chevron-down"></i></span>
     </div>
     <div id="collapseEquipements" class="collapse">
       <div class="card-body p-0">
@@ -379,21 +414,22 @@ mapentity_tags %}
   </div>
 </div>
 
-<!-- Table Elements Paysager (collapsed by default) -->
+<!-- Collapsible card for Elements Paysager -->
+<!-- Collapsible card for Elements Paysager -->
 <div class="content mb-3">
   <div class="card">
-    <div class="card-header text-center" style="position: relative">
-      Elements Paysager
-      <button
-        class="btn btn-link p-0 float-end collapsed"
-        type="button"
+    <div class="card-header text-center d-flex justify-content-between align-items-center"
+    <div class="card-header text-center d-flex justify-content-between align-items-center"
         data-toggle="collapse"
         data-target="#collapseElementsPaysager"
         aria-expanded="false"
         aria-controls="collapseElementsPaysager"
-      >
-        <span class="chevron-icon"><i class="bi bi-chevron-down"></i></span>
-      </button>
+        style="cursor:pointer; position: relative;">
+      <span>Elements Paysager</span>
+      <span class="chevron-icon"><i class="bi bi-chevron-down"></i></span>
+        style="cursor:pointer; position: relative;">
+      <span>Elements Paysager</span>
+      <span class="chevron-icon"><i class="bi bi-chevron-down"></i></span>
     </div>
     <div id="collapseElementsPaysager" class="collapse">
       <div class="card-body p-0">
@@ -416,9 +452,8 @@ mapentity_tags %}
             </tr>
             {% empty %}
             <tr>
-              <td colspan="4" class="text-center">
-                Aucun élément paysager associé
-              </td>
+              <td colspan="4" class="text-center">Aucun élément paysager associé</td>
+              <td colspan="4" class="text-center">Aucun élément paysager associé</td>
             </tr>
             {% endfor %}
           </tbody>
@@ -428,4 +463,30 @@ mapentity_tags %}
   </div>
 </div>
 
-{{ block.super }} {% endblock attributes %}
+{{ block.super }} 
+{% endblock attributes %}
+{{ block.super }} 
+{% endblock attributes %}
+
+{% block extrabody %}
+{{ block.super }}
+<style>
+  .card-header[data-toggle="collapse"] { cursor: pointer; }
+  .chevron-icon { transition: transform 0.2s; }
+  .collapse.show ~ .card-header .chevron-icon,
+  .card-header[aria-expanded="true"] .chevron-icon {
+    transform: rotate(180deg);
+  }
+</style>
+{% endblock extrabody %}
+{% block extrabody %}
+{{ block.super }}
+<style>
+  .card-header[data-toggle="collapse"] { cursor: pointer; }
+  .chevron-icon { transition: transform 0.2s; }
+  .collapse.show ~ .card-header .chevron-icon,
+  .card-header[aria-expanded="true"] .chevron-icon {
+    transform: rotate(180deg);
+  }
+</style>
+{% endblock extrabody %}
